Change min-width for card settings to hopefully fix issue with cards not showing on mob devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -109,9 +109,9 @@ body {
         max-width: 9540px;
 }}
 
-@media (min-width: 520px) {
+@media (min-width: 0px) {
     .card-columns {
-        column-count: 2;
+        column-count: 1;
         column-gap: 0.5rem;
         orphans: 1;
         widows: 1;
@@ -121,6 +121,7 @@ body {
         width: 100%;
     }
 }
+
 @media (min-width: 576px) {
     .card-columns {
         column-count: 2;
